--- a/03-image-figure.html
+++ b/03-image-figure.html
@@ -1,1 +1,32 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>피규어와 이미지</title>
+</head>
+<body>
+  <h1><img src="./images/webcafe-logo.png" alt="웹카페" /></h1>
+  <div><img src="./images/webcafe-logo.png" alt="" /></div>
+
+  <img src="./images/banner-narrow.jpg" alt="" />
+  <br />
+  <img src="./images/coffee.png" alt="" loading="lazy" />
+
+  <figure>
+    <img src="./images/likelion-black.png" alt="" />
+    <figcaption>멋쟁이 사자처럼</figcaption>
+  </figure>
+
+
+  <figure>
+    <img src="./images/likelion-black.png" alt="" />
+    <figcaption>
+      <p>
+        <strong>Responsive</strong>
+      </p>
+    </figcaption>
+  </figure>
+
+</body>
+</html>
