--- a/03-image-figure.html
+++ b/03-image-figure.html
@@ -20,11 +20,13 @@
 
 
   <figure>
-    <img src="./images/likelion-black.png" alt="" />
+    <img src="images/rwd.jpg" alt="" />
     <figcaption>
       <p>
-        <strong>Responsive</strong>
+        <strong>Responsive Web<br />Design Strategies</strong>
+        <span>반응형 웹디자인 전략</span>
       </p>
+      <a href="/">강의정보</a>
     </figcaption>
   </figure>
 
